# prompt-analysis-sdk

./: .gitignore  LICENSE  README.md  promptanalysis.yml  pyproject.toml
.github/workflows/: ci.yml  pages.yml  publish-pypi.yml  release-build.yml
cli/: main.py
demo/: app.js  index.html  style.css
demo/py/prompt_analysis/: __init__.py  analyzer.py  config.py  report.py
demo/py/prompt_analysis/rules/: base.py  runner.py
demo/py/prompt_analysis/rules/core/: missing_output_format.py  no_output_limit.py
demo/py/prompt_analysis/tokenizers/: __init__.py  approx.py  base.py
prompt_analysis/: normalized.py
prompt_analysis/rules/: __init__.py  runner.py
prompt_analysis/rules/core/: __init__.py  missing_output_format.py  no_output_limit.py
prompt_analysis/tokenizers/: approx.py  base.py
